[package]
name = "keylight2"
version = "0.1.0"
edition = "2021"

[dependencies]
anim = "0.1.4"
argon2 = { version = "0.5.3", features = ["rand", "password-hash", "zeroize"] }
argon2-async = { path = "argon2-async" }
chacha20poly1305 = "0.10.1"
chbs = "0.1.1"
directories = "5.0.1"
iced = { version = "0.13", features = ["lazy", "tokio", "wgpu"] }
postcard = { version = "1.1.0", features = ["alloc"] }
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "sqlite",
    "sqlx-sqlite",
] }
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["full", "tokio-macros"] }
zeroize = { version = "1.8.1", features = ["derive", "simd"] }
defer = "0.2.1"


[dependencies.libsqlite3-sys]
version = "0.30.1"
features = ["sqlcipher"]
